# spaces

./: CMakeLists.txt  md_iteration_comparison.cpp  redirect_compiler_output.bash.in
.github/workflows/: cmake-multi-platform.yml
include/spaces/: cartesian_product.hpp  config.hpp  cursor.hpp  for_each.hpp  index_generator.hpp  index_md_range.hpp  mdrange.hpp  mdspan.hpp  meta.hpp  on_extent.hpp  optimization_hints.hpp  optional.hpp  overloaded.hpp  position.hpp  preprocessor.hpp  space_bind.hpp  storage_md_range.hpp  test.hpp  tuple.hpp  tuple_algorithms.hpp  version.hpp  view_optimization.hpp  views.hpp
test/performance/: CMakeLists.txt  memset_2d.cpp  memset_2d_cartesian_product_iota.cpp  memset_2d_index_forward_iterators.cpp  memset_2d_index_generator.cpp  memset_2d_index_known_distance_iterators.cpp  memset_2d_index_random_access_iterators.cpp  memset_2d_index_range_based_for_loop.cpp  memset_2d_mdspan_raw_loop.cpp  memset_2d_reference.cpp  memset_2d_space_based_for_each.cpp  memset_2d_storage_range_based_for_loop.cpp  memset_diagonal_2d.cpp  memset_diagonal_2d_for_each_filter.cpp  memset_diagonal_2d_for_each_filter_o.cpp  memset_diagonal_2d_reference.cpp  memset_plane_3d.cpp  memset_plane_3d_for_each_filter.cpp  memset_plane_3d_for_each_filter_o.cpp  memset_plane_3d_reference.cpp
